--- a/app/src/main/res/layout/answer_stamp.xml
+++ b/app/src/main/res/layout/answer_stamp.xml
@@ -164,4 +164,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_home"
         app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/imageView_last"
+        android:layout_width="971dp"
+        android:layout_height="283dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="112dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="54dp"
+        android:layout_height="235dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="正解数"
+        android:textSize="60sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_seitousu"
+        android:layout_width="81dp"
+        android:layout_height="129dp"
+        android:layout_marginStart="16dp"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView31" />
+
 </android.support.constraint.ConstraintLayout>
