--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -12,8 +12,10 @@
         android:layout_height="962dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.501"
         app:srcCompat="@drawable/ok_image_haikei" />
 
     <TextView
@@ -24,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_title" />
@@ -44,7 +46,7 @@
         android:id="@+id/ans_2"
         android:layout_width="100dp"
         android:layout_height="70dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="2"
         android:textSize="36sp"
@@ -70,58 +72,64 @@
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginBottom="116dp"
-        android:layout_marginStart="58dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="83dp"
         android:text="4"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView_回答3"
-        app:layout_constraintTop_toBottomOf="@+id/ans_2" />
+        app:layout_constraintTop_toBottomOf="@+id/ans_2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView_回答1"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="24dp"
-        android:textSize="36sp"
+        android:layout_width="330dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/ans_1"
         app:layout_constraintTop_toBottomOf="@+id/textView_問題" />
 
     <TextView
         android:id="@+id/textView_回答2"
-        android:layout_width="296dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="204dp"
-        android:textSize="36sp"
+        android:layout_width="320dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="208dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/ans_2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_回答3"
-        android:layout_width="303dp"
-        android:layout_height="60dp"
+        android:layout_width="333dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="116dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="95dp"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ans_3"
-        app:layout_constraintTop_toBottomOf="@+id/textView_回答1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_回答1"
+        app:layout_constraintVertical_bias="0.557" />
 
     <TextView
         android:id="@+id/textView_回答4"
-        android:layout_width="292dp"
-        android:layout_height="63dp"
+        android:layout_width="321dp"
+        android:layout_height="92dp"
         android:layout_marginBottom="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ans_4"
         app:layout_constraintTop_toBottomOf="@+id/textView_回答2"
-        app:layout_constraintVertical_bias="0.468" />
+        app:layout_constraintVertical_bias="0.551" />
 
     <TextView
         android:id="@+id/textView_title"
@@ -134,16 +142,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_ホームへ"
-        android:layout_width="151dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="2dp"
-        android:background="@drawable/image_home"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView11"
