--- a/app/src/main/res/layout/answer_stamp.xml
+++ b/app/src/main/res/layout/answer_stamp.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/imageView57"
+        android:layout_width="wrap_content"
+        android:layout_height="723dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ok_image_haikei" />
+
     <TextView
         android:id="@+id/textView12"
         android:layout_width="165dp"
@@ -176,22 +184,26 @@
 
     <TextView
         android:id="@+id/textView31"
-        android:layout_width="54dp"
-        android:layout_height="235dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="96dp"
+        android:layout_height="244dp"
+        android:layout_marginStart="16dp"
         android:text="正解数"
-        android:textSize="60sp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="70sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_seitousu"
-        android:layout_width="81dp"
-        android:layout_height="129dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="103dp"
+        android:layout_height="117dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textAllCaps="false"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
