--- a/app/src/main/res/layout/qr1.xml
+++ b/app/src/main/res/layout/qr1.xml
@@ -145,20 +145,22 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="156dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="244dp"
+        android:layout_width="260dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="160dp"
         android:text="残り回答数"
-        android:textSize="30sp"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView_残り回数"
-        android:layout_width="74dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="75dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="8dp"
+        android:text="1"
         android:textAlignment="center"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -167,11 +169,10 @@
 
     <TextView
         android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_width="87dp"
+        android:layout_height="74dp"
         android:text="回"
-        android:textSize="36sp"
+        android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView_残り回数" />
 
