--- a/app/src/main/res/layout/activity_mainhelp.xml
+++ b/app/src/main/res/layout/activity_mainhelp.xml
@@ -56,12 +56,12 @@
 
     <Button
         android:id="@+id/buttonback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/lightbluebutton"
         android:text="@string/main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
