--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -23,20 +23,26 @@
         app:layout_constraintVertical_bias="0.851"
         app:srcCompat="@drawable/title_haikei" />
 
-    <ImageView
-        android:id="@+id/imageView_top1"
+    <Button
+        android:id="@+id/ars_button"
         android:layout_width="170dp"
         android:layout_height="145dp"
+        android:background="@drawable/top_image1"
+        android:text="ARS"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="45sp"
+        android:textStyle="bold|italic"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/top_image1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ARS"
         android:layout_width="26dp"
         android:layout_height="109dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="16dp"
         android:lineSpacingExtra="-15sp"
         android:text="ARS"
         android:textAlignment="center"
