--- a/app/src/main/res/layout/activity_main301.xml
+++ b/app/src/main/res/layout/activity_main301.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color05">
 
     <TextView
         android:id="@+id/textView4"
@@ -140,8 +141,8 @@
         android:layout_width="102dp"
         android:layout_height="52dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/backyellowbutton"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
