--- a/app/src/main/res/layout/activity_main302.xml
+++ b/app/src/main/res/layout/activity_main302.xml
@@ -79,8 +79,8 @@
         android:layout_width="102dp"
         android:layout_height="52dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/backyellowbutton"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
